test/2/type/conv-nonliteral.ploy
main = {
  p = (0 (0 0))
  b:(Int (i:Int j:Int)) = p
}
